<resources>
    <string name="app_name">云阅</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">分享</string>

    <string name="custom_header_hint_normal">下拉更新</string>
    <string name="custom_header_hint_release">松开更新</string>
    <string name="custom_refreshing">更新中…</string>
    <string name="custom_refresh_done">更新完成</string>

    <string name="hello_blank_fragment">Hello blank mFragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="actionbar_search">搜索</string>
    <string name="actionbar_help_coin">积分规则</string>
    <string name="actionbar_more">更多信息</string>
    <string name="actionbar_webview_share">分享</string>
    <string name="actionbar_webview_cope">复制链接</string>
    <string name="actionbar_webview_open">浏览器打开</string>
    <string name="actionbar_webview_refresh">刷新</string>
    <string name="actionbar_webview_collect">添加到收藏</string>
    <string name="actionbar_share">分享给朋友\(^o^)/~</string>
    <string name="picture_has_save_to">已保存至 %s</string>
    <string name="string_empty">""</string>
    <string name="github_issues">您好，很希望得到您的意见，由于没有线上反馈系统，您可以在GitHub的Issues处说明问题原因，也可以通过以下方式联系我，我将根据情况尽量处理哦 ~</string>
    <string name="string_about">由于网易云音乐用了很久，特别喜爱它的界面风格，所以仿写了它的UI。如构成侵权请及时通知我修改或删除。
        \n\n 大部分数据使用的是鸿洋的玩安卓、代码家的干货集中营和时光网，一切数据解释权都归鸿洋、代码家和时光网所有。
        \n\n 干货每日推荐每天12：30更新，如没有内容则取缓存。应用已使用离线缓存，断网时可得到上一次请求到的数据。
        \n\n 整体采用Retrofit+RxJava+MvvM-DataBinding框架。
        \n\n 我的GitHub：https://github.com/youlookwhat
        \n\n 项目完全开源，如果你觉得不错，请帮忙Star一下吧，或帮忙分享给你的朋友，这是给我们最大的动力与支持，非常感谢！
        </string>

    <string name="string_about_me">
        Blog: http://jingbin.me
        \nEmail: jingbin127@163.com
    </string>

    <string name="string_lib">
           android.arch.lifecycle:extensions:1.1.1
        \n android.arch.lifecycle:reactivestreams:1.1.1
        \n android.arch.persistence.room:runtime
        \n com.android.support:appcompat-v7:28.0.0
        \n com.android.support:design:28.0.0
        \n com.android.support:cardview-v7:28.0.0
        \n com.google.zxing:core:3.3.0
        \n com.google.code.gson:gson:2.8.5
        \n com.squareup.retrofit2:retrofit:2.4.0
        \n com.squareup.retrofit2:converter-gson:2.3.0
        \n com.squareup.okhttp3:okhttp:3.10.0
        \n com.squareup.okhttp3:logging-interceptor:3.9.1
        \n com.squareup.okio:okio:1.14.0
        \n com.squareup.retrofit2:adapter-rxjava2:2.4.0
        \n io.reactivex.rxjava2:rxjava:2.2.7
        \n io.reactivex.rxjava2:rxandroid:2.0.1
        \n com.github.bumptech.glide:glide:4.9.0
        \n com.github.chrisbanes:PhotoView:2.1.4
        \n com.github.youlookwhat:WebProgress:1.1.0
        \n com.github.youlookwhat:SBannerView:1.1.1
        \n com.github.youlookwhat:ByRecyclerView:x.y.z-support
        \n com.nineoldandroids:library:2.4.0
        \n com.youth.banner:banner:1.4.10
        \n com.cocosw:bottomsheet:1.3.1@aar
        \n com.squareup.leakcanary:leakcanary-android
        \n com.tencent.bugly:crashreport
    </string>

    <string name="string_everyday_empty">暂时没有更新内容，去看看其他信息吧~</string>
    <string name="string_share_text">发现了一个高仿网易云音乐的App，里面有大量IT干货，每天提供安卓，IOS等最新资讯，还有最新电影热映榜和大量书籍信息，大力推荐哦~：https://fir.im/cloudreader</string>

    <!--项目布局文件引用的字符串-->
    <string name="no_name">佚名</string>
    <string name="string_rating">评分：</string>
    <string name="string_rating_num">人评分</string>
    <string name="string_type">类型：</string>
    <string name="string_film_time">片长：</string>
    <string name="string_film_date">上映日期：</string>
    <string name="string_publisher">出版社：</string>
    <string name="string_joke">------</string>
    <string name="no_name_joke">匿名用户</string>
    <string name="string_dian">&#160;·&#160;</string>
    <string name="string_add">+</string>
    <string name="string_tree_category_size">共%s个子分类</string>

    <!--url-->
    <string name="string_url_cloudreader">https://github.com/youlookwhat/CloudReader</string>
    <!--fir.im-->
    <string name="string_url_new_version">https://fir.im/cloudreader</string>
    <!--issues-->
    <string name="string_url_issues">https://github.com/youlookwhat/CloudReader/issues</string>
    <!--jianshu-->
    <string name="string_url_jianshu">http://www.jianshu.com/users/e43c6e979831/latest_articles</string>
    <string name="string_url_gankio">http://gank.io/api</string>
    <string name="string_url_douban">https://developers.douban.com/wiki/?title=terms</string>
    <string name="string_url_mtime">http://www.mtime.com/</string>
    <!--更新日志-->
    <string name="string_url_update_log">http://jingbin.me/2016/12/30/%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97-%E4%BA%91%E9%98%85/</string>
    <!--问题归纳-->
    <string name="string_url_faq">http://jingbin.me/2016/12/25/%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98-%E4%BA%91%E9%98%85/</string>
    <!--干货闲读-->
    <string name="string_url_xiandu">https://gank.io/xiandu</string>
    <!--玩安卓-->
    <string name="string_url_wanandroid">http://www.wanandroid.com/index</string>
    <!--每日推荐-->
    <string name="string_url_trending">https://github.com/trending</string>
    <!--积分规则-->
    <string name="string_url_coin_help">https://www.wanandroid.com/blog/show/2653</string>
    <!--赞赏-->
    <string name="string_url_admire">https://github.com/youlookwhat/CloudReader/blob/master/file/admire.md</string>
    <string name="string_admire">本项目已累计迭代将近三年，期间很多api失效被替换，和增加了玩安卓的近全部功能，耗费了作者很多心血。
        \n\n每月的后 7 天，会在侧边栏放置赞助入口；如果您认为本软件内容对你确实产生了帮助，或者喜欢云阅，不防小额赞助一下。这样可以增加我维护本软件的动力，迭代更多实用有趣的功能。
        \n\n非常感谢！</string>
    <string name="zk_market">中康超市</string>
    <string name="delicicous">美食</string>
    <string name="take_out">外卖</string>
    <string name="discount">优惠</string>
    <string name="zk_vip">中康会员</string>
    <string name="first_page">首页</string>
    <string name="fd_market">福豆商城</string>
    <string name="msg">消息</string>
    <string name="shop_car">购物车</string>
    <string name="mine">我的</string>
    <string name="more">更多</string>
</resources>
